--- a/references.bib
+++ b/references.bib
@@ -96,3 +96,20 @@
 	url = {https://doi.org/10.18637/jss.v059.i10},
 	langid = {en}
 }
+
+@article{readxl,
+	title = {readxl: Read Excel Files},
+	author = {Wickham, Hadley and Bryan, Jennifer},
+	year = {2023},
+	date = {2023},
+	url = {https://CRAN.R-project.org/package=readxl}
+}
+
+@Manual{R-core,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2023},
+    url = {https://www.R-project.org/},
+  }
