--- a/references.bib
+++ b/references.bib
@@ -120,3 +120,16 @@
     year = {2023},
     url = {https://allisonhorst.com/allison-horst},
   }
+@article{tukey1949,
+	title = {Comparing Individual Means in the Analysis of Variance},
+	author = {Tukey, John W.},
+	year = {1949},
+	date = {1949},
+	journal = {Biometrics},
+	pages = {99--114},
+	volume = {5},
+	number = {2},
+	doi = {10.2307/3001913},
+	url = {https://www.jstor.org/stable/3001913},
+	note = {Publisher: [Wiley, International Biometric Society]}
+}
