--- a/r4babs1/r4babs1.qmd
+++ b/r4babs1/r4babs1.qmd
@@ -38,14 +38,14 @@ Learning Data Analysis in R is like learning to speak a new language or play an 
 
 # Content
 
-## Week 6: Understanding file systems
+## Understanding file systems
 You will learn about operating systems, files and file systems, working directories, absolute and relative paths, what R and RStudio are
 
-## Week 7:  Introduction to R and project organisation
+## Introduction to R and project organisation
 You will start writing R code in RStudio and will create your first graph! You will learn about data types such as “numerics” and “characters” and some of the different types of objects in R such as “vectors” and “dataframes”. These are the building blocks for the rest of your R journey. You will also learn a workflow and about the layout of RStudio and using RStudio Projects.
 
-## Week 8: Types of variable, summarising and plotting data
+## Types of variable, summarising and plotting data
 The type of values our data can take is important in how we analyse and visualise it. This week you will learn the difference between continuous and discrete values and how we summarise and visualise them. The focus will be on plotting and summarising single variables. You will also learn how to read in data in to RStudio from plain text files and Excel files.
 
-## Week 9: Summarising data with several variables
+## Summarising data with several variables
 This week you will start plotting data sets with more than one variable. This means you need to be able determine which variable is the response and which is the explanatory. You will find out what is meant by “tidy” data and how to perform a simple data tidying task. Finally you will discover how to save your figures and place them in documents.
