--- a/r4babs2/week-3/workshop.qmd
+++ b/r4babs2/week-3/workshop.qmd
@@ -13,7 +13,7 @@ library(kableExtra)
 
 # Introduction
 
-![Artwork by @allison_horst: How much I think I know about R"](images/how-much-i-know.png){fig-alt="Illustrated line plot of 'How much I think I know about R' on the y-axis, and 'Time' on the x-axis. Along the line are emoji-style faces, showing the non-linear progression of R knowledge over time. At first, a nervous face becomes a happy face early on in learning, then a grimace face at an intermediate peak before a steep decline (with an exhausted face at the local minimum). Then, a determined face charges back up a hill, reaching another peak with a mind-blown face and text annotation 'join R community on twitter' followed by another decline, but this time the faces look happy even though their 'How much I think I know about R' value is declining." width="800"}
+![Artwork by @allison_horst: "How much I think I know about R"](images/how-much-i-know.png){fig-alt="Illustrated line plot of 'How much I think I know about R' on the y-axis, and 'Time' on the x-axis. Along the line are emoji-style faces, showing the non-linear progression of R knowledge over time. At first, a nervous face becomes a happy face early on in learning, then a grimace face at an intermediate peak before a steep decline (with an exhausted face at the local minimum). Then, a determined face charges back up a hill, reaching another peak with a mind-blown face and text annotation 'join R community on twitter' followed by another decline, but this time the faces look happy even though their 'How much I think I know about R' value is declining." width="800"}
 
 ## Session overview
 
@@ -159,7 +159,7 @@ summary(mod)
 
 ### Check assumptions
 
-The assumptions of the general linear model are that the residuals – the difference between predicted value (i.e., the group mean) and observed values - are normally distributed and have homogeneous variance. To check these we need to calculate the residuals and we can do examine the `mod$residuals` variable. You may want to refer to [Checking assumptions](../week-2/workshop.html#checking-assumptions) in Week 2's workshop.
+The assumptions of the general linear model are that the residuals – the difference between predicted value (i.e., the group mean) and observed values - are normally distributed and have homogeneous variance. To check these we need to calculate the residuals and we can do examine the `mod$residuals` variable. You may want to refer to [Checking assumptions](../week-2/workshop.html#checking-assumptions) in the "Single regression" workshop.
 
 ![](images/do_in_R.png)  Plot the model residuals against the fitted values.
 ```{r}
@@ -176,7 +176,7 @@ plot(mod, which = 1)
 <!-- #---THINKING ANSWER--- -->
 
 <!-- The residuals look 'homogeneously' distributed. That is, the variance is the same  -->
-<!-- for the two groups  -->
+<!-- for the three groups  -->
 
 To examine normality of the model residuals we can plot them as a histogram and do a normality test on them.
 
@@ -212,7 +212,7 @@ shapiro.test(mod$residuals)
 
 ### Illustrating
 
-![](images/do_in_R.png) Create a figure like the one below. You may need to the [Visualise](../../r4babs1/week-9/workshop.html#visualise) from the Week 9 workshop of BABS1 [@rand2023]
+![](images/do_in_R.png) Create a figure like the one below. You may need to refer to [Visualise](../../r4babs1/week-9/workshop.html#visualise) from the "Summarising data with several variables" workshop [@rand2023]
 
 ```{r}
 #| echo: false
