--- a/r4babs2/week-4/overview.qmd
+++ b/r4babs2/week-4/overview.qmd
@@ -3,7 +3,7 @@ title: "Overview"
 subtitle: "One-way ANOVA and Kruskal-Wallis"
 ---
 
-This week you will 
+Last week you learnt how to use and interpret the general linear model when the *x* variable was categorical with two groups. You will now extend that to situations when there are more than two groups. This is often known as the one-way ANOVA (**an**alysis **o**f **var**iance). You will also learn about the Kruskal- Wallis test which can be used when the assumptions of the general linear model are not met.
 
 ### Learning objectives
 
@@ -14,6 +14,8 @@ The successful student will be able to:
 -   select, appropriately, one-way ANOVA and Kruskal-Wallis 
 
 -   know what functions are used in R to run these tests and how to interpret them
+
+-   evaluate whether the assumptions of `lm()` are met
 
 -   scientifically report the results of these tests including appropriate figures
 
@@ -32,6 +34,6 @@ The successful student will be able to:
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i.  💻  Appropriately test if fitness and acclimation effectthe sodium content of sweat
+    i.  💻  Appropriately test if fitness and acclimation effect the sodium content of sweat
     ii.  💻  Appropriately test if insecticides vary in their effectiveness
 
